--- a/datamap/templates/datamap/datamap_list.html
+++ b/datamap/templates/datamap/datamap_list.html
@@ -3,7 +3,7 @@
 {% block title %}Datamaps{% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" style="padding-top: 20px">
         
         <h3 id="show-datamap-table">Datamaps</h3>
         <table class="table table-hover">
