--- a/register/templates/register/project_list.html
+++ b/register/templates/register/project_list.html
@@ -3,7 +3,7 @@
 {% block title %}List of Projects{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="padding-top: 20px">
     <h3>Projects</h3>
     <div class="container">
         <p>This text is hard-coded into the template but should be moved into the database.</p>
