--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -14,13 +14,13 @@
 {% block bootstrap-navbar %}
 
     <div class="m-b-1">
-        <nav class="navbar navbar-expand-md navbar-light bg-transparent">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'dashboard' %}">dbasik dashboard</a>
+            <a class="navbar-brand" href="{% url 'dashboard' %}"><img style="max-width: 96px; margin-top: -7px;" src="{% static 'img/bw_logo.png' %}"></a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
