--- a/returns/templates/returns/returns_list.html
+++ b/returns/templates/returns/returns_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div class="container">
+    <div class="container" style="padding-top: 20px">
         {% if messages %}
             <ul>
                 {% for message in messages %}
