--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>{% block title %}{% endblock %}</title>
     {% block extra_head_tags %}{% endblock %}
 </head>
@@ -14,7 +15,7 @@
 {% block bootstrap-navbar %}
 
     <div class="m-b-1">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="margin-bottom: 24px">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -60,25 +61,25 @@
                 <ul class="nav justify-content-end">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'dashboard' %}">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-light" href="{% url 'dashboard' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'dashboard' %}">About</a>
+                        <a class="nav-link text-light" href="{% url 'dashboard' %}">About</a>
                     </li>
                     {% if request.user.is_authenticated %}
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
                             {#<a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>#}
-                            <a class="nav-link" href="#">{{ user }}</a>
+                            <a class="nav-link text-light" href="#">{{ user }}</a>
                         </li>
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
-                            <a class="nav-link" href="{% url 'logout' %}">{% trans "Sign Out" %}</a>
+                            <a class="nav-link text-light" href="{% url 'logout' %}">{% trans "Sign Out" %}</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
-                            <a id="sign-up-link" class="nav-link"
+                            <a id="sign-up-link text-light" class="nav-link"
                                href="#">{% trans "Sign Up" %}</a>
                         </li>
                         <li class="nav-item">
