--- a/returns/templates/returns/return_confirm_delete.html
+++ b/returns/templates/returns/return_confirm_delete.html
@@ -7,8 +7,9 @@
 <div class="container">
     <div class="row">
         <form method="post" accept-charset="utf-8">{% csrf_token %}
-            Are you sure you want to delete "{{ object }}"?
-            <div class="buttonHolder p-1">
+            <h2>Are you sure you want to delete "{{ object }}"?</h2>
+            
+            <div class="buttonHolder p-10">
                 <button class="btn btn-danger" type="submit" value="Submit" name="submit" id="submit-button"/>Yes</button>
                 <a href="{% url 'returns:returns_list' %}" class="btn btn-primary">Cancel</a> 
             </div>
