--- a/templates/templates/templates/template_list.html
+++ b/templates/templates/templates/template_list.html
@@ -3,7 +3,7 @@
 {% block title %}Templates{% endblock %}
 
 {% block content %}
-    <div class="container" style="padding-top: 20px">
+    <div class="container">
         
         <h3 id="show-datamap-table">Templates</h3>
         <table class="table table-hover">
