--- a/register/templates/register/project_detail.html
+++ b/register/templates/register/project_detail.html
@@ -13,11 +13,11 @@
             <!--<p>There are no dependencies for this Project.</p>-->
         <!--{% endif %}-->
         <!--</div>-->
-        <div class="mt-5 row">
-            <div class="col-6">
+        <div class="mt-4 row">
+            <div class="col-8">
                 <table class="table table-hover">
                     <tr>
-                        <td class="col-3"><strong>Tier:</td></strong><td>{{ object.tier }}</td>  
+                        <td class="col-2"><strong>Tier:</td></strong><td class="col-5">{{ object.tier }}</td>  
                     </tr>
                     <tr>
                         <td class="col-3"><strong>Project Type:</td></strong><td>{{ object.project_type }}</td>  
@@ -32,9 +32,24 @@
                         <td class="col-3"><strong>Planned End Date:</td></strong><td>{{ object.planned_end_date|date:"j M Y" }}</td>
                     </tr>
                     <tr>
+                        <td class="px-2"><strong>SRO Full Name:</strong></td><td>{{ sro_full_name }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-2"><strong>Working Contact:</strong></td><td>{{ working_contact }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-2"><strong>Tel:</strong></td><td>{{ working_contact_phone }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-2"><strong>DfT Group:</strong></td><td>{{ dft_group }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-2"><strong>DfT Division:</strong></td><td>{{ dft_division }}</td>
+                    </tr>
+                    <tr>
                 </table>
             </div>
-            <div class="col-5">
+            <div class="col-4">
                 <div class="card text-dark bg-light mb-3">
                     {% if fq %}
                         <div class="card-header">Key Data - {{ fq }} return</div>
@@ -43,18 +58,6 @@
                                 <tr>
                                     <td class="px-2"><strong>Current RAG:</strong></td><td style="background: #{{ rag_c }}"><span style="color: white">{{ rag }}</span></td>
                                 </tr> 
-                                <tr>
-                                    <td class="px-2"><strong>SRO Full Name:</strong></td><td>{{ sro_full_name }}</td>
-                                </tr>
-                                <tr>
-                                    <td class="px-2"><strong>DfT Director:</strong></td><td>Sarah Blair</td>
-                                </tr>
-                                <tr>
-                                    <td class="px-2"><strong>Latest BICC submission:</strong></td><td>Q1-2018-19</td>
-                                </tr>
-                                <tr>
-                                    <td class="px-2"><strong>Workflow Stage:</strong></td><td>MANDATE</td>
-                                </tr>
                             </table>
                         </div> 
                     {% else %}
@@ -64,30 +67,20 @@
                                 <tr>
                                     <td class="px-2"><strong>Current RAG:</strong></td><td>-</td>
                                 </tr> 
-                                <tr>
-                                    <td class="px-2"><strong>SRO Full Name:</strong></td><td>-</td>
-                                </tr>
-                                <tr>
-                                    <td class="px-2"><strong>DfT Director:</strong></td><td>-</td>
-                                </tr>
-                                <tr>
-                                    <td class="px-2"><strong>Latest BICC submission:</strong></td><td>-</td>
-                                </tr>
-                                <tr>
-                                    <td class="px-2"><strong>Workflow Stage:</strong></td><td>-</td>
-                                </tr>
                             </table>
                         </div> 
                     {% endif %}
                 </div>
             </div>
         </div> 
-        <div class="row">
-           <div class="col">
-              <h5>Additional information:</h5> 
-              <p>Text here</p>
-           </div> 
-        </div>
+        {% if fq %}
+            <div class="row">
+            <div class="col">
+                <h4>DCA Narrative: {{ fq }}</h4>
+                <p>{{ dca_narrative }}</p>
+            </div> 
+            </div>
+        {% endif %}
         <div class="buttonHolder">
             <a class="btn btn-primary" href="{% url 'register:projecttype_update' object.slug %}">Edit</a>
             <a class="btn btn-danger" href="{% url 'register:projecttype_delete' object.slug %}">Delete</a>
