--- a/register/templates/register/project_detail.html
+++ b/register/templates/register/project_detail.html
@@ -82,8 +82,8 @@
             </div>
         {% endif %}
         <div class="buttonHolder">
-            <a class="btn btn-primary" href="{% url 'register:projecttype_update' object.slug %}">Edit</a>
-            <a class="btn btn-danger" href="{% url 'register:projecttype_delete' object.slug %}">Delete</a>
+            <a class="btn btn-primary" href="{% url 'register:project_update' object.slug %}">Edit</a>
+            <a class="btn btn-danger" href="{% url 'register:project_delete' object.slug %}">Delete</a>
         </div>
 
     </div>
