--- a/returns/templates/returns/returns_list.html
+++ b/returns/templates/returns/returns_list.html
@@ -22,8 +22,8 @@
         {% endif %}
 
 
-        <div class="p-3 mb-4 bg-primary text-white border border-dark">
-        <p>Return templates may be uploaded <strong>individually</strong> or as a <strong>batch</strong> (batch upload).  If using batch upload,
+        <div class="p-3 mb-4 bg-primary text-white">
+        <p><strong>NOTE:</strong> Return templates may be uploaded <strong>individually</strong> or as a <strong>batch</strong> (batch upload).  If using batch upload,
         the file name must match exactly the name of the project it corresponds with.</p>
 
         e.g. the file for East Coast Mainline Programme must be called <code class="text-white">East Coast Mainline Programme.xlsm</code>.
