fixed column widths

--- a/register/templates/register/financialquarter_list.html
+++ b/register/templates/register/financialquarter_list.html
@@ -9,7 +9,7 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col" class="col-sm-4">Financial Quarter</th>
+                    <th scope="col">Financial Quarter</th>
                 </tr>
             </thead>
             {% if object_list %}
