--- a/register/templates/register/project_list.html
+++ b/register/templates/register/project_list.html
@@ -10,12 +10,12 @@
         <p>General description of what a Project is and why we need it.</p>
         <table class="table table-hover">
             <tr>
-                <th scope="col" class="col-lg-4">Project</th>
-                <th scope="col" class="col-lg-2">Tier</th>
-                <th scope="col" class="col-lg-2">Type</th>
-                <th scope="col" class="col-lg-2">Stage</th>
-                <th scope="col" class="col-lg-1">Start Date</th>
-                <th scope="col" class="col-lg-1">Planned End Date</th>
+                <th scope="col">Project</th>
+                <th scope="col">Tier</th>
+                <th scope="col">Type</th>
+                <th scope="col">Stage</th>
+                <th scope="col">Start Date</th>
+                <th scope="col">Planned End Date</th>
             </tr>
             {% for item in object_list %}
             <tr>
