--- a/register/templates/register/projecttype_list.html
+++ b/register/templates/register/projecttype_list.html
@@ -10,7 +10,7 @@
         <p>General description of what a Project Type is and why we need it.</p>
         <table class="table table-hover">
             <tr>
-                <th scope="col" class="col-sm-2">Project Type</th>
+                <th scope="col">Project Type</th>
                 <th scope="col">Description</th>
             </tr>
             {% for item in object_list %}
