--- a/datamap/templates/datamap/datamap_list.html
+++ b/datamap/templates/datamap/datamap_list.html
@@ -9,10 +9,10 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col" class="col-sm-4">Datamap name</th>
-                    <th scope="col" class="col-sm-2">Tier</th>
-                    <th scope="col" class="col-sm-2">Active</th>
-                    <th scope="col" class="col-sm-1">Action</th>
+                    <th scope="col">Datamap name</th>
+                    <th scope="col">Tier</th>
+                    <th scope="col">Active</th>
+                    <th scope="col">Action</th>
                 </tr>
             </thead>
             {% if object_list %}
