fixed erroneous message on project list

--- a/register/templates/register/project_list.html
+++ b/register/templates/register/project_list.html
@@ -6,8 +6,7 @@
 <div class="container">
     <h3>Projects</h3>
     <div class="container">
-        <p>This text is hard-coded into the template but should be moved into the database.</p>
-        <p>General description of what a Project is and why we need it.</p>
+        <p>List of projects in the system.</p>
         <table class="table table-hover">
             <tr>
                 <th scope="col">Project</th>
