added rough error message for not passing xlsm file

--- a/excelparser/templates/excelparser/process_populated_template.html
+++ b/excelparser/templates/excelparser/process_populated_template.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %}Create a single return{% endblock %}
+{% block title %}Process a populated template{% endblock %}
 
 {% block content %}
 <div class="container">
